--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Liste des produits</h1>
+	<h1>Liste des produits(modid sur la branche test)</h1>
 	<table class="table">
 		<thead>
 			<tr>
